@@ -468,10 +468,11 @@ If called with '\\[universal-argument]', goto folder to have a few new messages.
 		  mew-use-biff))
 	(count 0)
 	(dispcount 0)
-	msg file)
+	newfld msg file)
     (if biff (mew-biff-clean-up))
     (shimbun-open-group shimbun group)
     (unless (file-exists-p (mew-expand-folder fld))
+      (setq newfld t)
       (mew-make-directory (mew-expand-folder fld)))
     (mew-shimbun-db-setup fld)
     (unwind-protect
@@ -512,9 +513,10 @@ If called with '\\[universal-argument]', goto folder to have a few new messages.
 	      (setq dispcount (1+ dispcount))
 	      (mew-shimbun-mode-display group server count dispcount sum))))
       (mew-summary-unlock)
-      (static-if (fboundp 'mew-local-folder-insert)
-	  (mew-local-folder-insert fld)
-	(mew-folder-insert fld))
+      (when newfld
+	(static-if (fboundp 'mew-local-folder-insert)
+	    (mew-local-folder-insert fld)
+	  (mew-folder-insert fld)))
       (if biff (mew-biff-setup))
       (shimbun-close-group shimbun)
       (shimbun-close shimbun)
